# Course_5_Vedishev

./: .gitignore  README.md  main.py  pyproject.toml
src/: employers_id  employers_id.py  good_exm.py  headhunter_api.py  hh_api.py  utils.py
src/sql/: config.py  config_parser.py  create_bd.py  database.ini  dbmanager.py  insert_data.py  queries.sql
