[tool.poetry]
name = "course-5-vedishev"
version = "0.1.0"
description = ""
authors = ["<Anton Vedischev> <<vedishchevanton@gmail.com>>"]
readme = "README.md"
packages = [{include = "course_5_vedishev"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
